Fix z-index property in #message and clean up CSS

--- a/style.css
+++ b/style.css
@@ -75,6 +75,6 @@ img {
   color:red;
   font-size:30px;
   padding:15px;
-  z-index1;
+  z-index:1;
   pointer-events:none;
 }
